--- a/SKH_MultiShooting/.gitignore
+++ b/SKH_MultiShooting/.gitignore
@@ -72,3 +72,11 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Add Myproject ignors
+.vs/
+Binaries/
+Intermediate/
+Saved/
+Plugins/*/Binaries/
+Plugins/*/Intermediate/
