--- a/SKH_MultiShooting/Config/DefaultEngine.ini
+++ b/SKH_MultiShooting/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/GameStartupMap.GameStartupMap
-EditorStartupMap=/Game/Maps/GameStartupMap.GameStartupMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
