--- a/SKH_MultiShooting/Config/DefaultGame.ini
+++ b/SKH_MultiShooting/Config/DefaultGame.ini
@@ -93,8 +93,10 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 -IniSectionBlacklist=HordeStorageServers
 +IniSectionBlacklist=HordeStorageServers
-+MapsToCook=(FilePath="/Game/Maps/Lobby")
-+MapsToCook=(FilePath="/Game/Maps/GameStartupMap")
++MapsToCook=(FilePath="/Game/Maps/MainLobby")
++MapsToCook=(FilePath="/Game/Maps/MainMenu")
++MapsToCook=(FilePath="/Game/Maps/TransitionMap")
++MapsToCook=(FilePath="/Game/Maps/MainPlayerMap")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
