Revert "24.03.20_로켓런처추가" 전으로 다시 롤백
This reverts commit 126a7e6b12769bf83fae79c318b4399a425bac1a.

--- a/SKH_MultiShooting/Config/DefaultEngine.ini
+++ b/SKH_MultiShooting/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/MainPlayerMap.MainPlayerMap
 EditorStartupMap=/Game/Maps/MainPlayerMap.MainPlayerMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
