--- a/SKH_MultiShooting/Config/DefaultEngine.ini
+++ b/SKH_MultiShooting/Config/DefaultEngine.ini
@@ -117,3 +117,5 @@ NetServerMaxTickRate=60
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[PacketSimulationSettings]
+PktLag = 100
