--- a/SKH_MultiShooting/Config/DefaultEngine.ini
+++ b/SKH_MultiShooting/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainPlayerMap.MainPlayerMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/MainPlayerMap.MainPlayerMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
