--- a/SKH_MultiShooting/Config/DefaultGame.ini
+++ b/SKH_MultiShooting/Config/DefaultGame.ini
@@ -96,7 +96,9 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/MainLobby")
 +MapsToCook=(FilePath="/Game/Maps/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/TransitionMap")
-+MapsToCook=(FilePath="/Game/Maps/MainPlayerMap")
++MapsToCook=(FilePath="/Game/Maps/Map_SinglePlay")
++MapsToCook=(FilePath="/Game/Maps/Map_TeamPlay")
++MapsToCook=(FilePath="/Game/Maps/Map_TeamFlag")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
