--- a/SKH_MultiShooting/Config/DefaultEngine.ini
+++ b/SKH_MultiShooting/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/ITeamTestMap.ITeamTestMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
